--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
 
 </head>
 <body>
-<!-- partial:index.partial.html -->
-<body>
   <div class="container">
     <header class="cabecalho">
       <div class="perfil">
@@ -42,6 +40,7 @@
               on <a href="https://codepen.io">CodePen</a>.</span>
           </p>
           <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>
+          <!--       <li class="projetos-item"><a>AluraFlix</a></li> -->
           <li class="projetos-item">
             <p>Tabela de Classificação</p>
           </li>
@@ -63,8 +62,3 @@
     </main>
   </div>
 </body>
-<!-- partial -->
-  <script  src="./script.js"></script>
-
-</body>
-</html>
