--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Certificard</title>
+  <title>CodePen - Aula 9</title>
   <link rel="stylesheet" href="./style.css">
 
 </head>
+<body>
+<!-- partial:index.partial.html -->
 <body>
   <div class="container">
     <header class="cabecalho">
@@ -62,3 +64,8 @@
     </main>
   </div>
 </body>
+<!-- partial -->
+  <script  src="./script.js"></script>
+
+</body>
+</html>
